tests/private/private.exp
Error ------------------------------------------------------------------------------------------------- private.js:11:27

Cannot get `this._x` because property `_x` is missing in `B` [1]. [prop-missing]

   private.js:11:27
   11|     var _x: string = this._x;
                                 ^^

References:
   private.js:8:7
    8| class B extends A {
             ^ [1]



Found 1 error
